update to 0.8.8, switch to jre21-openjdk + java21-openjfx